--- a/languages/en_US.po
+++ b/languages/en_US.po
@@ -1,17 +1,17 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version: devdmbootstrap4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-27 18:42+0000\n"
-"PO-Revision-Date: 2018-03-27 18:42+0000\n"
+"POT-Creation-Date: 2018-03-29 17:24+0000\n"
+"PO-Revision-Date: 2018-03-29 17:26+0000\n"
+"Last-Translator: dannym <danny@devdm.com>\n"
 "Language-Team: English (United States)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: en-US\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Loco https://localise.biz/\n"
-"Last-Translator: dannym <danny@devdm.com>\n"
-"Language: en-US"
+"X-Generator: Loco https://localise.biz/"
 
 #: ../../../../../../4x/theme/repos/devdmbootstrap4/template-parts/comments.php:13
 #:  
@@ -50,8 +50,6 @@ msgid "Comments"
 msgstr ""
 
 #. %s: Name of current post
-#. %s: Name of current post
-#. %s: Name of current post
 #: ../../../../../../4x/theme/repos/devdmbootstrap4/archive.php:65 
 #: ../../../../../../4x/theme/repos/devdmbootstrap4/single.php:44 
 #: ../../../../../../4x/theme/repos/devdmbootstrap4/index.php:46
@@ -59,11 +57,13 @@ msgstr ""
 msgid "Continue reading<span class=\"screen-reader-text\"> \"%s\"</span>"
 msgstr ""
 
+#. %s: Name of post category
 #: ../../../../../../4x/theme/repos/devdmbootstrap4/template-parts/archive-types/category.php:4
 #, php-format
 msgid "Currently Viewing Posts in %s"
 msgstr ""
 
+#. %s: tag
 #: ../../../../../../4x/theme/repos/devdmbootstrap4/template-parts/archive-types/tag.php:4
 #, php-format
 msgid "Currently Viewing Posts Tagged %s"
@@ -73,6 +73,7 @@ msgstr ""
 msgid "Customize DevDmBootstrap4 Specific Theme Options."
 msgstr ""
 
+#. %s: The Day
 #: ../../../../../../4x/theme/repos/devdmbootstrap4/template-parts/archive-types/date.php:5
 #, php-format
 msgid "Daily Archives %s"
@@ -146,6 +147,7 @@ msgstr ""
 msgid "Load the Font Awesome Free Icon Library?"
 msgstr ""
 
+#. %s: Admin URL to profile, Display Name, Logout
 #: ../../../../../../4x/theme/repos/devdmbootstrap4/includes/utilities.php:57
 #, php-format
 msgid ""
@@ -164,6 +166,7 @@ msgstr ""
 msgid "Menu"
 msgstr ""
 
+#. %s: The month
 #: ../../../../../../4x/theme/repos/devdmbootstrap4/template-parts/archive-types/date.php:9
 #, php-format
 msgid "Monthly Archives %s"
@@ -201,6 +204,14 @@ msgstr ""
 
 #: ../../../../../../4x/theme/repos/devdmbootstrap4/includes/customizer.php:59
 msgid "Right Sidebar Size"
+msgstr ""
+
+#: ../../../../../../4x/theme/repos/devdmbootstrap4/searchform.php:6
+msgid "Search"
+msgstr ""
+
+#: ../../../../../../4x/theme/repos/devdmbootstrap4/searchform.php:4
+msgid "Search ..."
 msgstr ""
 
 #: ../../../../../../4x/theme/repos/devdmbootstrap4/includes/customizer.php:162
@@ -242,6 +253,7 @@ msgstr ""
 msgid "Widgets in this area will be shown on all posts and pages."
 msgstr ""
 
+#. %s: The year
 #: ../../../../../../4x/theme/repos/devdmbootstrap4/template-parts/archive-types/date.php:13
 #, php-format
 msgid "Yearly Archives %s"
